# ros2-mock-serial-arm

./: .gitignore  CMakeLists.txt  mock_serial_arm.xml  package.xml
include/mock_serial_arm/: mock_hardware.hpp
src/: mock_hardware.cpp
